# jupyterhub-nbgrader-kubernetes

./: README.md  install.sh  manager_install.sh  update.sh
extra_files/: accessible_services.py  courses_info.json  courses_management.py  settings.py  students_info.json
images/: flask_manager.Dockerfile  hub.Dockerfile  instructor.Dockerfile  student.Dockerfile
manager/: requirements.txt  run.py
manager-configs/: deployment.yaml  service.yaml
nbgrader-chart/: Chart.yaml  values.yaml
nbgrader-chart/templates/: _helpers.tpl  hub_secret.yaml  manager_deployment.yaml
nbgrader-exchange/: README.md  pyproject.toml
nbgrader-exchange/nbgrader_k8s_exchange/plugin/: collect.py  submit.py
